tests/paczka1/small_fuzzy/49349358.err
Error in line 1: BaXjOSgL72 A245 33,3
Error in line 12: QZdWg0 A245 62,3
